[gd_scene load_steps=2 format=3 uid="uid://h08p1qskhvv8"]

[ext_resource type="Script" uid="uid://ddhdp2g2hvqlo" path="res://system/main.gd" id="1_0xm2m"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0xm2m")

[node name="Window" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="MenuBar" type="MenuBar" parent="Window"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
flat = true
switch_on_hover = false

[node name="PM_File" type="PopupMenu" parent="Window/MenuBar"]
oversampling_override = 1.0
item_count = 3
item_0/text = "Open"
item_0/id = 0
item_1/text = "Save"
item_1/id = 1
item_2/text = "SaveAs"
item_2/id = 2

[node name="PM_Edit" type="PopupMenu" parent="Window/MenuBar"]
oversampling_override = 1.0
item_count = 2
item_0/text = "Undo"
item_0/id = 0
item_1/text = "Redo"
item_1/id = 1

[node name="Body" type="HSplitContainer" parent="Window"]
layout_mode = 2
size_flags_vertical = 3

[node name="MainPanel" type="Panel" parent="Window/Body"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Inspector" type="Panel" parent="Window/Body"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2

[node name="Inspector" type="VBoxContainer" parent="Window/Body/Inspector"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 0
offset_left = 972.0
offset_right = 1152.0
offset_bottom = 612.0
